* Corrected and modified text in Wall.  * Deleted tooltip css.  * Displayed warning for language unknown in a more visible way (although we're soon probably not going to need it again...).

--- a/app/webroot/css/tatoeba.newgeneric.css
+++ b/app/webroot/css/tatoeba.newgeneric.css
@@ -96,3 +96,14 @@
 	font-size: 1.3em;
 	font-family: Georgia, serif;
 }
+
+/* Warning */
+
+.warning{
+	font-size: 15px;
+	padding: 10px;
+	margin: 10px 0px;
+	border:1px solid #FFC1B5;
+	background-color:#FFDDD6; 
+	color:#D1523C;
+}
